<resources>
    <string name="app_name">ACPLite</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="user">Ingrese su usuario</string>
    <string name="pass">Ingrese su contraseña</string>
    <string name="login">Ingresar</string>
    <string name="newAccount">¿No tienes una cuenta? Crea una aquí</string>
    <string name="arboles">Arboles</string>
    <string name="productos">Productos</string>
    <string name="eventos">Eventos</string>
    <string name="publicaciones">Publicaciones</string>
    <string name="fav">Favoritos</string>
    <string name="about">Acerca de</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_trees">Catálogo de Arboles</string>
    <string name="treeName">Nombre del Árbol</string>
    <string name="saveImageBtn">Guardar</string>
    <string name="treeScientificName">Nombre científico del árbol</string>
    <string name="treeDescription">Descripción</string>
    <string name="RegistroTrees">Registro de Arboles</string>
    <string name="DetailTree">Detalles del Árbol</string>
    <string name="updateTreeBtn">Actualizar</string>
    <string name="deleteTreeBtn">Eliminar</string>
    <string name="RegistroProducts">Registro de Productos</string>
    <string name="productName">Nombre</string>
    <string name="productID">ID del producto</string>
    <string name="productPrice">Precio</string>
    <string name="fragmentProductos">Productos</string>
    <string name="DetailProduct">Detalle del Producto</string>
    <string name="RegistroEventos">Registro de Eventos</string>
    <string name="eventDate">Fecha del evento</string>
    <string name="eventName">Nombre del evento</string>
    <string name="DetailEvento">Detalle del Evento</string>
    <string name="fragmentEventos">Eventos</string>
    <string name="RegistroPosts">Registro de Publicaciones</string>
    <string name="postName">Nombre de la publicación</string>
    <string name="DetailPost">Detalle de la publicación</string>
    <string name="fragmentPosts">Publicaciones</string>
</resources>