<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />

        <item
            android:id="@+id/fragment_trees"
            android:icon="@drawable/arboles"
            android:title="@string/arboles"
            />

        <item
            android:id="@+id/fragmentProductos"
            android:icon="@drawable/productos"
            android:title="@string/productos"
            />

        <item
            android:id="@+id/nav_eventos"
            android:icon="@drawable/event"
            android:title="@string/eventos"
            />

        <item
            android:id="@+id/nav_publicaciones"
            android:icon="@drawable/publish"
            android:title="@string/publicaciones"
            />

        <item
            android:id="@+id/nav_favoritos"
            android:icon="@drawable/fav"
            android:title="@string/fav"
            />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/about"
            android:title="@string/about"
            />

    </group>
</menu>