<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.acplite.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.acplite.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.acplite.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/fragment_trees"
        android:name="com.example.acplite.ui.fragments.TreesFragment"
        android:label="@string/menu_trees"
        tools:layout="@layout/fragment_trees" />
    <fragment
        android:id="@+id/fragmentProductos"
        android:name="com.example.acplite.ui.fragments.FragmentProductos"
        android:label="@string/fragmentProductos"
        tools:layout="@layout/fragment_productos" />
    <fragment
        android:id="@+id/fragmentEventos"
        android:name="com.example.acplite.ui.fragments.FragmentEventos"
        android:label="@string/fragmentEventos"
        tools:layout="@layout/fragment_eventos" />
    <fragment
        android:id="@+id/fragmentPublicaciones"
        android:name="com.example.acplite.ui.fragments.FragmentPublicaciones"
        android:label="@string/fragmentPosts"
        tools:layout="@layout/fragment_publicaciones" />
</navigation>