<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ActivityUDEvento">

    <TextView
        android:id="@+id/txtvRegistrarEvento1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/DetailEvento"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/etEventName1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/eventName"
        android:textColor="@color/white"
        android:maxLength="25"
        android:singleLine="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtvRegistrarEvento1"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />

    <EditText
        android:id="@+id/etEventDate1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/eventDate"
        android:textColor="@color/white"
        android:maxLength="35"
        android:inputType="date"
        android:singleLine="true"
        app:layout_constraintRight_toRightOf="@id/etEventName1"
        app:layout_constraintLeft_toLeftOf="@id/etEventName1"
        app:layout_constraintTop_toBottomOf="@+id/etEventName1"
        android:layout_marginTop="5dp"
        android:focusable="false"
        android:clickable="true"
        />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="@id/etEventDate1"
        app:layout_constraintTop_toBottomOf="@id/etEventDate1"
        app:layout_constraintLeft_toLeftOf="@id/etEventDate1"
        android:layout_marginTop="15dp"
        >

        <Button
            android:id="@+id/btnUpdateEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/AzulOscuro"
            android:text="@string/updateTreeBtn"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:onClick="clickear"
            />

        <Button
            android:id="@+id/btnDeleteEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/AzulOscuro"
            android:text="@string/deleteTreeBtn"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:onClick="clickear"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>