<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/saveTreeLayout"
    tools:context=".ui.ActivityTreeRegister">

    <TextView
        android:id="@+id/txtvRegistrarProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/RegistroProducts"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/etProductID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/productID"
        android:textColor="@color/white"
        android:maxLength="25"
        android:singleLine="true"
        android:inputType="numberDecimal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtvRegistrarProducto"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />

    <EditText
        android:id="@+id/etProductName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/productName"
        android:textColor="@color/white"
        android:maxLength="35"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintRight_toRightOf="@id/etProductID"
        app:layout_constraintLeft_toLeftOf="@id/etProductID"
        app:layout_constraintTop_toBottomOf="@+id/etProductID"
        android:layout_marginTop="5dp"
        />

    <EditText
        android:id="@+id/etProductPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/productPrice"
        android:textColor="@color/white"
        android:inputType="numberDecimal"
        android:singleLine="true"
        app:layout_constraintRight_toRightOf="@id/etProductID"
        app:layout_constraintLeft_toLeftOf="@id/etProductID"
        app:layout_constraintTop_toBottomOf="@+id/etProductName"
        android:layout_marginTop="5dp"
        />

    <ImageView
        android:id="@+id/productImg"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        app:layout_constraintTop_toBottomOf="@id/etProductPrice"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:src="@drawable/ic_baseline_camera_alt_24"
        android:scaleType="fitCenter"
        android:backgroundTint="@color/white"
        />

    <Button
        android:id="@+id/btnSaveProduct"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/productImg"
        app:layout_constraintRight_toRightOf="@id/productImg"
        app:layout_constraintLeft_toLeftOf="@id/productImg"
        android:backgroundTint="@color/AzulOscuro"
        android:text="@string/saveImageBtn"
        android:textColor="@color/white"
        android:onClick="storeProductImage"
        />

</androidx.constraintlayout.widget.ConstraintLayout>