<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ActivityUDEvento">

    <TextView
        android:id="@+id/txtvRegistrarPublicacion1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/DetailPost"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/white"
        />

    <EditText
        android:id="@+id/etPostName1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/postName"
        android:textColor="@color/white"
        android:maxLength="25"
        android:singleLine="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtvRegistrarPublicacion1"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="@id/etPostName1"
        app:layout_constraintTop_toBottomOf="@id/etPostName1"
        app:layout_constraintLeft_toLeftOf="@id/etPostName1"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/btnUpdatePost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/AzulOscuro"
            android:onClick="clickear"
            android:text="@string/updateTreeBtn"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnDeletePost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/AzulOscuro"
            android:onClick="clickear"
            android:text="@string/deleteTreeBtn"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>