<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/saveTreeLayout"
    tools:context=".ui.ActivityTreeRegister">

    <EditText
        android:id="@+id/etTreeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/treeName"
        android:textColor="@color/white"
        android:maxLength="25"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="30dp"
        />

    <EditText
        android:id="@+id/etTreeScientificName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/treeScientificName"
        android:textColor="@color/white"
        android:maxLength="25"
        app:layout_constraintRight_toRightOf="@id/etTreeName"
        app:layout_constraintLeft_toLeftOf="@id/etTreeName"
        app:layout_constraintTop_toBottomOf="@+id/etTreeName"
        android:layout_marginTop="5dp"
        />

    <EditText
        android:id="@+id/etTreeDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/treeDescription"
        android:textColor="@color/white"
        android:maxLength="25"
        app:layout_constraintRight_toRightOf="@id/etTreeName"
        app:layout_constraintLeft_toLeftOf="@id/etTreeName"
        app:layout_constraintTop_toBottomOf="@+id/etTreeScientificName"
        android:layout_marginTop="5dp"
        />

    <ImageView
        android:id="@+id/treeImg"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintTop_toBottomOf="@id/etTreeDescription"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:src="@drawable/ic_baseline_camera_alt_24"
        android:scaleType="fitCenter"
        android:backgroundTint="@color/white"
        />

    <Button
        android:id="@+id/btnSaveTree"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/treeImg"
        app:layout_constraintRight_toRightOf="@id/treeImg"
        app:layout_constraintLeft_toLeftOf="@id/treeImg"
        android:backgroundTint="@color/AzulOscuro"
        android:text="@string/saveImageBtn"
        android:textColor="@color/white"
        android:onClick="storeImage"
        />

</androidx.constraintlayout.widget.ConstraintLayout>