<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/log_in"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/b_h_2">

<View
    android:id="@+id/imgLogin"
    android:layout_width="194dp"
    android:layout_height="150dp"
    android:background="@drawable/imglogin"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp"
    />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/imgLogin"
        android:layout_centerHorizontal="true"
        android:hint="@string/user"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radio"
            android:textColor="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/txtUser"
        android:layout_centerHorizontal="true"
        android:hint="@string/pass"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radio"
            android:textColor="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtPass"
        android:background="@drawable/round_button"
        android:textColor="@color/iconBlue"
        android:text="@string/login"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:text="@string/newAccount"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="12sp"
        style="?attr/materialButtonOutlinedStyle"
        />

</RelativeLayout>
